--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.5",
     "@prisma/client": "^4.9.0",
     "@remix-run/node": "^1.11.0",
     "@remix-run/react": "^1.11.0",
     "@remix-run/vercel": "^1.11.0",
     "@vercel/node": "^2.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "latest",
+    "remix": "latest"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.11.0",
